# maven-analytics

./: .gitignore  README.md  main.py  pyproject.toml
data-drills/flatten-the-stack/: flatten-the-stack.ipynb
data-drills/movie-metrics/: movie-metrics.ipynb
data-drills/movie-metrics/.ipynb_checkpoints/: movie-metrics-checkpoint.ipynb
data-drills/org-chart-overhaul/: Untitled.ipynb
data-drills/rolling-up-looking-back/: rolling-up-looking-back.ipynb
data-drills/spot-the-sale/: spot-the-sale.ipynb
data-drills/streak-leaderboard/: streak-leaderboard-pandas.ipynb  streak-leaderboard.ipynb
data-drills/turning-bullish/: turning-bullish-pandas.ipynb  turning-bullish.ipynb
project-portfolio/airbnb-listing-analysis/: airbnb-listing-analysis.ipynb
project-portfolio/airline-flight-delay-report/: airline-flight-delay-report.py
project-portfolio/airline-flight-delay-report/layouts/: airline-flight-delay-report.grid.json
project-portfolio/candy-recommendation/: candy-recommendation.py
project-portfolio/candy-recommendation/layouts/: candy-recommendation.grid.json
project-portfolio/restaurant-order-analysis/: restaurant-order-analysis.ipynb
project-portfolio/toy-store-kpi-report/: toy-store-kpi-report.ipynb  toy-store-kpi-report.py
project-portfolio/toy-store-kpi-report/layouts/: toy-store-kpi-report.grid.json
project-portfolio/toy-store-kpi-report/maven-toys-data/: sales.parquet
