[project]
name = "maven-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair[all]>=6.0.0",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars[pyarrow]>=1.36.1",
    "sqlglot[rs]>=28.5.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]
